fix: обработка JSON ошибок, улучшения

--- a/index.html
+++ b/index.html
@@ -65,65 +65,76 @@
     }
 
     function getCredentials() {
-      const id = document.getElementById('idInstance').value;
-      const token = document.getElementById('apiTokenInstance').value;
+      const id = document.getElementById('idInstance').value.trim();
+      const token = document.getElementById('apiTokenInstance').value.trim();
       return { id, token };
+    }
+
+    async function fetchJsonSafe(url, options = {}) {
+      try {
+        const res = await fetch(url, options);
+        const text = await res.text();
+        let json;
+        try {
+          json = JSON.parse(text);
+        } catch (e) {
+          json = { error: `Не удалось распарсить JSON: ${e.message}`, raw: text };
+        }
+        return json;
+      } catch (err) {
+        return { error: err.message };
+      }
     }
 
     async function callApi(method) {
       const { id, token } = getCredentials();
-      try {
-        const res = await fetch(`${apiHost}/waInstance${id}/${method}/${token}`);
-        const data = await res.json();
-        setResponse(data);
-      } catch (err) {
-        setResponse({ error: err.message });
-      }
+      const url = `${apiHost}/waInstance${id}/${method}/${token}`;
+      const data = await fetchJsonSafe(url);
+      setResponse(data);
     }
 
     async function sendMessage() {
       const { id, token } = getCredentials();
-      const phone = document.getElementById('phoneMessage').value;
-      const message = document.getElementById('messageText').value;
-      try {
-        const res = await fetch(`${apiHost}/waInstance${id}/sendMessage/${token}`, {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({
-            chatId: `${phone}@c.us`,
-            message
-          })
-        });
-        const data = await res.json();
-        setResponse(data);
-      } catch (err) {
-        setResponse({ error: err.message });
-      }
+      const phone = document.getElementById('phoneMessage').value.trim();
+      const message = document.getElementById('messageText').value.trim();
+
+      const url = `${apiHost}/waInstance${id}/sendMessage/${token}`;
+      const body = {
+        chatId: `${phone}@c.us`,
+        message
+      };
+
+      const data = await fetchJsonSafe(url, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify(body)
+      });
+      setResponse(data);
     }
 
     async function sendFileByUrl() {
       const { id, token } = getCredentials();
-      const phone = document.getElementById('phoneFile').value;
-      const url = document.getElementById('fileUrl').value;
-      try {
-        const res = await fetch(`${apiHost}/waInstance${id}/sendFileByUrl/${token}`, {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({
-            chatId: `${phone}@c.us`,
-            urlFile: url,
-            fileName: url.split('/').pop()
-          })
-        });
-        const data = await res.json();
-        setResponse(data);
-      } catch (err) {
-        setResponse({ error: err.message });
-      }
+      const phone = document.getElementById('phoneFile').value.trim();
+      const urlFile = document.getElementById('fileUrl').value.trim();
+      const fileName = urlFile.split("/").pop();
+
+      const url = `${apiHost}/waInstance${id}/sendFileByUrl/${token}`;
+      const body = {
+        chatId: `${phone}@c.us`,
+        urlFile,
+        fileName
+      };
+
+      const data = await fetchJsonSafe(url, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify(body)
+      });
+      setResponse(data);
     }
   </script>
 </body>
